--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.1",
+    "jetifier": "^1.6.3",
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-contacts": "^5.0.1",
