--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.1",
+    "appcenter": "2.1.0",
+    "appcenter-analytics": "2.1.0",
+    "appcenter-crashes": "2.1.0",
     "jetifier": "^1.6.3",
     "react": "16.8.6",
     "react-native": "0.60.3",
