--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,11 @@ project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
 ]
 
+project.ext.sentryCli = [
+    logLevel: "debug",
+    flavorAware: false
+]
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
