--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,8 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+MYAPP_RELEASE_STORE_FILE=poc-akabi-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=poc-akabi-ky-alias
+MYAPP_RELEASE_STORE_PASSWORD=pocakabi
+MYAPP_RELEASE_KEY_PASSWORD=pocakabi
