--- a/android/local.properties
+++ b/android/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Jul 14 19:53:47 CEST 2019
-sdk.dir=C\:\\Users\\remic\\AppData\\Local\\Android\\Sdk
+# sdk.dir=C\:\\Users\\remic\\AppData\\Local\\Android\\Sdk
